@@ -5,28 +5,33 @@ import model.Cham;
 import model.Food;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
+import org.springframework.context.annotation.ComponentScan;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Import;
-
-import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.List;
 
-@Import(BillConfig.class)
+//1-ий спосіб
+//@Import(BillConfig.class)
+
+//2-ий спосіб
+@ComponentScan(basePackages = "cfg")
 @Configuration
 public class AppConfig {
 
     @Autowired
     private BillConfig billConfig;
 
-    @Bean
-    Bills myBills(){
-        return new Bills(List.of(billConfig.firstBill(),billConfig.secondBill(),billConfig.thirdBill()));
-    }
+//    @Resource
+//    private BillConfig billConfig;
+
 //    @Bean
-//    Bills firstBills(){
-//        return new Bills(Arrays.asList(billConfig.firstBill(),billConfig.secondBill(),billConfig.thirdBill()));
+//    Bills myBills(){
+//        return new Bills(List.of(billConfig.firstBill(),billConfig.secondBill(),billConfig.thirdBill()));
 //    }
+    @Bean
+    Bills firstBills(){
+        return new Bills(Arrays.asList(billConfig.firstBill(),billConfig.secondBill(),billConfig.thirdBill()));
+    }
 //    @Bean
 //    Bills secondBills(){
 //        List<Bill> myList = new ArrayList<>(Arrays.asList(billConfig.firstBill(),billConfig.secondBill(),billConfig.thirdBill()));
